infrastructure/overlays/prod/postgres-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  template:
    metadata:
      annotations:
        ad.datadoghq.com/postgres.check_names: '["postgres"]'
        ad.datadoghq.com/postgres.instances: '[{"host":"%%host%%", "port":5432,"username":"datadog","password":"%%env_POSTGRES_PASSWORD%%"}]'
        ad.datadoghq.com/postgres.init_configs: '[{}]'

        ad.datadoghq.com/pgbouncer.check_names: '["pgbouncer"]'
        ad.datadoghq.com/pgbouncer.instances: '[{"database_url": "postgresql://admin:%%env_PGBOUNCER_PASSWORD%%@%%host%%:6432/pgbouncer?sslmode=allow"}]'
        ad.datadoghq.com/pgbouncer.init_configs: '[{}]'
    spec:
      containers:
        - name: postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
          args: ["postgres", "-c", "max_connections=200"]
        - name: pgbouncer
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pv-claim
