infrastructure/overlays/prod/redis-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  template:
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: redis-pv-claim
      containers:
        - name: redis
          volumeMounts:
          - mountPath: /data
            name: data
          resources:
            limits:
              cpu: "0.2"
              memory: "256Mi"
