infrastructure/overlays/prod/registry-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
spec:
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      volumes:
        - name: registry-htpasswd
          persistentVolumeClaim:
            claimName: registry-htpasswd-pv-claim
        - name: registry-data
          persistentVolumeClaim:
            claimName: registry-data-pv-claim
      containers:
        - name: registry
          volumeMounts:
          - mountPath: /auth/htpasswd
            name: registry-htpasswd
          - mountPath: /var/lib/registry
            name: registry-data
