infrastructure/overlays/prod/thumbor-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thumbor
spec:
  template:
    spec:
      volumes:
      - name: thumbor
        persistentVolumeClaim:
          claimName: thumbor-pv-claim
      containers:
      - name: thumbor
        volumeMounts:
        - mountPath: /data
          name: thumbor
        resources:
          limits:
            cpu: "0.5"
            memory: 128M
