infrastructure/overlays/prod/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: services-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.org/client-max-body-size: "600m"
    nginx.ingress.kubernetes.io/proxy-body-size: "600m"

spec:
  rules:
  - host: registry.michigantechcourses.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: registry
            port:
              number: 80
  tls:
  - hosts:
    - registry.michigantechcourses.com
    secretName: registry-ingress-cert

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: application-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.org/client-max-body-size: "600m"
    nginx.ingress.kubernetes.io/proxy-body-size: "600m"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_cache static-cache;
      proxy_cache_bypass $http_x_purge;
      add_header X-Cache-Status $upstream_cache_status;
spec:
  rules:
  - host: api.michigantechcourses.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: application
            port:
              number: 80
  - host: thumbor.michigantechcourses.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thumbor
            port:
              number: 80
  tls:
  - hosts:
    - api.michigantechcourses.com
    secretName: api-ingress-cert
  - hosts:
    - thumbor.michigantechcourses.com
    secretName: thumbor-ingress-cert
